# LVForge

./: .gitignore  .wslinstall.sh  .wslrun.sh  README.md  backup_full.py  log.md  pyproject.toml
docs/paper/IEEE-conference-template-062824/: IEEE-conference-template-062824.aux  IEEE-conference-template-062824.tex  generate_plotly_figures.py
docs/paper/poster/: baposter.cls  poster.tex
scripts/: run_all.py  train_flax.py  train_pytorch.py
src/pe_malware/: __init__.py
src/pe_malware/config/: __init__.py  settings.py
src/pe_malware/data/: __init__.py  dataset.py  preprocessor.py  sampling.py  tokenizer.py
src/pe_malware/evaluation/: __init__.py  metrics.py  plotting.py
src/pe_malware/models/: __init__.py  arcface.py  contrastive.py  lv_model.py  multi_similarity.py  transformer.py  triplet.py
src/pe_malware/models/flax/: __init__.py  contrastive.py  lv_model.py  multi_similarity.py  transformer.py  triplet.py
src/pe_malware/models/pytorch/: __init__.py  lv_model.py
src/pe_malware/training/: __init__.py  flax_metric_trainer.py  flax_trainer.py  losses.py  pytorch_trainer.py
